nginx/service-clusterip-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: clash-all
  namespace: clash
spec:
  type: ClusterIP
  ports:
    - name: clash-all
      port: 7890
      targetPort: 7890
      protocol: TCP
  selector:
    application: clash
    component: clash-all
